# jewelpop

./: CMakeLists.txt  README.md  board.cpp  board.hpp  constants.hpp  jewels.hpp  main.cpp  rect.cpp  rect.h  rect.hpp  window.cpp  window.h  window.hpp
src/: board.cpp  board.hpp  jewels.hpp  main.cpp  window.cpp  window.hpp
